dashboard.css
* {
    margin: 0;
    padding: 0;
    border: none;
    outline: none;
    box-sizing: border-box;
    font-family: sans-serif;
}
body {
    display: flex;
}
.sidebar {
    position: sticky;
    top: 0;
    left: 0;
    bottom: 0;
    width: 110px;
    height: 100vh;
    padding: 0 1.7rem;
    color: #fff;
    overflow: hidden;
    transition: all 0.5s linear;
    background: #71b7e6;
}

.sidebar:hover {
    width: 240px;
    transition: 0.5%;
}
.logo {
    height:80px;
    padding: 16px;
}
.menu {
    height: 88%;
    position: relative;
    list-style: none;
    padding: 0;
}
.menu li {
    padding: 1rem;
    margin: 8px 8;
    border-radius: 8px;
    transition: all 0.5s ease-in-out;
}
.menu li:hover, .active{
    background: #e0e0e058;
}

.menu a {
    color: #fff;
    font-size: 14px;
    text-decoration: none;
    display: flex;
    align-items: center;
    gap: 1.5rem;
}

.menu a span {
    overflow: hidden;
}

.menu a i {
    font-size: 1.2rem;
}

.main--content {
    position: relative;
    background: #ebe9e9;
    width: 100%;
    padding: 1rem;
}

.header--wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    background: #fff;
    border-radius: 10px;
    padding: 10px 2rem;
    margin-bottom: 1rem;
}

.header--title {
    color: rgba(113, 99, 186, 255);
}

.user--info {
   display: flex;
   align-items: center;
   gap: 1; 
}

.search--box {
    background: rgb(237, 237, 237);
    border-radius: 15px;
    color: rgba(113, 99, 186, 255);
    display: flex;
    align-items: center;
    gap: 5px;
    padding: 4px 12px;
}

.search--box input {
    background: transparent;
    padding: 10px;
}

.search--box i {
    font-size: 1.2rem;
    cursor: pointer;
    transition: all 0.5s ease-out;
}

.search--box i:hover {
    transform: scale(1.2);
}

/* card container */
.card--container {
    background: #fff;
    padding: 2rem;
    border-radius: 18px;
}

.card--wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 20px;
}

.main--title {
    color: rgba(113, 99, 186, 255);
    padding-bottom: 10px;
    font-size: 15px;
}

.payment--card {
    background: rgb(229, 233, 223);
    border-radius: 18px;
    padding: 1.2rem;
    width: 250px;
    height: 150px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    transition: all 0.5s ease-in-out;
}

.payment--card:hover {
    transform: translate(-5px);
}

.card--header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}

.amount {
    display: flex;
    flex-direction: column;
}

.title {
    font-size: 12px;
    font-weight: 200;
}

.amount--value {
    font-size: 24px;
    font-family: 'Courier New', Courier, monospace;
    font-weight: 600;
}

.icon {
    color: #fff;
    padding: 1rem;
    height: 60px;
    width: 60px;
    text-align: center;
    border-radius: 50%;
    font-size: 1.5rem;
    background: red;
}

.card--detail {
    font-size: 18px;
    color: #777777;
    letter-spacing: 2px;
    font-family: 'Courier New', Courier, monospace;
}

/* color */

.light-red {
    background: rgb(251, 233, 233);
}

.light-purple {
    background: rgb(254, 226, 254);
}

.light-green {
    background: rgb(235, 254, 235);
}

.light-blue {
    background: rgb(236, 236, 254);
}

.dark-red {
    background: red;
}

.dark-purple {
    background: purple;
}
.dark-green {
    background: green;
}
.dark-blue {
    background: blue;
}


/* tabuler section */
.tabular--wrapper {
    background: #fff;
    margin-top: 1rem;
    border-radius: 10px;
    padding: 2rem;
}

.table-container {
    width: 100%;
}

table {
    width: 100%;
    border-collapse: collapse;
}

thead {
    background: rgba(113, 99, 186, 255);
    color: #fff;
}

th {
    padding: 15px;
    text-align: left;
}

tbody {
    background: #f2f2f2;
}

td {
    padding: 15px;
    font-size: 14px;
    color: #333;
}

tr:nth-child(even) {
    background: #fff;
}

tfoot {
    background: rgba(113, 99, 186, 255);
    font-weight: bold;
    color: #fff;
}

tfoot td {
    padding: 15px;
    color: #fff;
}

.table-container button {
    color: green;
    background: none;
    cursor: pointer;
}

.additem {
    display: inline-block;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-color:rgba(113, 99, 186, 255);
    color: white;
    text-align: center;
    line-height: 50px;
    font-size: 24px;
    text-decoration: none;
    cursor: pointer;
}

